Fix spacing and styles in content blocks form
- Fix spacing between the fields
- Fix the styles of the buttons

--- a/decidim-admin/app/packs/stylesheets/decidim/admin/_item_edit.scss
+++ b/decidim-admin/app/packs/stylesheets/decidim/admin/_item_edit.scss
@@ -71,6 +71,12 @@
       .editor-container .editor-input .ProseMirror {
         @apply bg-background-2;
       }
+
+      &.edit_content_block {
+        .tabs-content {
+          @apply mb-2;
+        }
+      }
     }
   }
 
