--- a/decidim-core/app/packs/stylesheets/decidim/_modal_update.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_modal_update.scss
@@ -117,7 +117,7 @@
   }
 
   &__files {
-    @apply mt-1 space-y-4;
+    @apply mt-2 space-y-4;
 
     /* It does not use regular class names, because it could come from javascript also. Avoid binds among css and js */
     > * {
